Strengthen Stage 2 backup recovery test